fix misalignment in header with status/pm icon

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -123,15 +123,18 @@
 
 /* Move category badges to banner below header */
 
+.d-header .contents {
+    margin-bottom: 0;
+}
+
 .d-header .extra-info-wrapper {
     overflow: visible;
+    margin-top: -15px;
 
     .title-wrapper {
-        padding-bottom: 38px;
 
         .badge-wrapper {
             margin: 0;
-            top: 15px;
 
             .badge-category {
                 margin-top: 0px;
@@ -153,11 +156,14 @@
             }
         }
 
+        h1 {
+            overflow: hidden;
+        }
+
 /* Increase font size of titles in header */
 
         h1 {
             font-size: 2.14em;
-            margin: -15px 0;
             line-height: 70px;
         }
 
